added more memory to docker containers

--- a/BenchmarkApp/Client/Pages/Neo4J.razor
+++ b/BenchmarkApp/Client/Pages/Neo4J.razor
@@ -19,6 +19,7 @@
             <th>Level</th>
             <th>LoadedEntities</th>
             <th>TimeSpan</th>
+            <th>Success</th>
         </tr>
         </thead>
         <tbody>
@@ -27,7 +28,8 @@
             <tr>
                 <td>@result.Level</td>
                 <td>@result.LoadedEntities</td>
-                <td>@result.TimeSpan</td>
+                <td>@result.MilliSeconds MilliSeconds</td>
+                <td>@result.Success</td>
             </tr>
         }
         </tbody>
