--- a/BenchmarkApp/Client/Pages/SQL.razor
+++ b/BenchmarkApp/Client/Pages/SQL.razor
@@ -29,7 +29,7 @@
             <tr>
                 <td>@result.Level</td>
                 <td>@result.LoadedEntities</td>
-                <td>@result.TimeSpan</td>
+                <td>@result.MilliSeconds</td>
                 <td>@result.Success</td>
             </tr>
         }
