--- a/BenchmarkApp/Client/Pages/Mongo.razor
+++ b/BenchmarkApp/Client/Pages/Mongo.razor
@@ -1,41 +1,45 @@
-﻿@page "/counter"
+﻿@page "/mongo"
 @using BenchmarkApp.Shared
 @inject HttpClient Http
 
-<button class="btn btn-primary" @onclick="StartBenchmark">Start Overall Mongo Benchmark</button>
-@if (_isLoading)
-{
-    <span style="margin-left: 15px"> .. Benchmark is loading, please wait</span>
-}
 
-<div style="height: 15px"> </div>
+<h4>Mongo Benchmark</h4>
+
+<div class="margin">
+    <button class="btn btn-primary" @onclick="StartBenchmark">Start Neighbours Benchmark</button>
+    @if (_isLoading)
+    {
+        <span style="margin-left: 15px"> .. Benchmark is loading, please wait</span>
+    }
+
+    <div style="height: 15px"> </div>
 
 
-@if (_results != null)
-{
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Level</th>
-            <th>LoadedEntities</th>
-            <th>TimeSpan</th>
-            <th>Success</th>
-        </tr>
-        </thead>
-        <tbody>
-        @foreach (var result in _results)
-        {
+    @if (_results != null)
+    {
+        <table class="table">
+            <thead>
             <tr>
-                <td>@result.Level</td>
-                <td>@result.LoadedEntities</td>
-                <td>@result.MilliSeconds</td>
-                <td>@result.Success</td>
+                <th>Level</th>
+                <th>LoadedEntities</th>
+                <th>TimeSpan</th>
+                <th>Success</th>
             </tr>
-        }
-        </tbody>
-    </table>
-}
-
+            </thead>
+            <tbody>
+            @foreach (var result in _results)
+            {
+                <tr>
+                    <td>@result.Level</td>
+                    <td>@result.LoadedEntities</td>
+                    <td>@result.MilliSeconds</td>
+                    <td>@result.Success</td>
+                </tr>
+            }
+            </tbody>
+        </table>
+    }
+</div>
 
 @code {
 
