--- a/BenchmarkApp/Client/Shared/NavMenu.razor
+++ b/BenchmarkApp/Client/Shared/NavMenu.razor
@@ -8,17 +8,17 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="sql" Match="NavLinkMatch.All">
                 <span class="oi oi-terminal" aria-hidden="true"></span> MySQL
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
+            <NavLink class="nav-link" href="mongo">
                 <span class="oi oi-document" aria-hidden="true"></span> MongoDB
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
+            <NavLink class="nav-link" href="neo4j">
                 <span class="oi oi-graph" aria-hidden="true"></span> Neo4J
             </NavLink>
         </li>
