--- a/BenchmarkApp/Client/wwwroot/css/app.css
+++ b/BenchmarkApp/Client/wwwroot/css/app.css
@@ -4,6 +4,10 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+.margin{
+    margin-top: 15px;
+}
+
 a, .btn-link {
     color: #0366d6;
 }
