--- a/BenchmarkApp/Client/Pages/Neo4J.razor
+++ b/BenchmarkApp/Client/Pages/Neo4J.razor
@@ -1,73 +1,8 @@
 ﻿@page "/neo4j"
-@using BenchmarkApp.Shared
 @inject HttpClient Http
 
-<h4>Neo4J Benchmark</h4>
-
-<div class="margin">
-    <div class="margin">
-        <button class="btn btn-primary" @onclick="StartNeighbourBenchmark">Start Neighbours Benchmark</button>
-        <span> Finding specific user and loading n level of friends (Every User has 10 friends) </span>
-    </div>
-    <div class="margin">
-        <button class="btn btn-primary" @onclick="StartUserBenchmark">Start User Benchmark</button>
-        <span> Loading n random users from Database</span>
-    </div>
-
-    @if (_isLoading)
-    {
-        <div class="margin">
-            <span style="margin-left: 15px"> .. Benchmark is loading, please wait</span>
-        </div>
-    }
-
-    <div style="height: 15px"> </div>
-
-
-    @if (_results != null)
-    {
-        <table class="table">
-            <thead>
-            <tr>
-                <th>Level</th>
-                <th>LoadedEntities</th>
-                <th>TimeSpan</th>
-                <th>Success</th>
-            </tr>
-            </thead>
-            <tbody>
-            @foreach (var result in _results)
-            {
-                <tr>
-                    <td>@result.Level</td>
-                    <td>@result.LoadedEntities</td>
-                    <td>@result.MilliSeconds Milliseconds</td>
-                    <td>@result.Success</td>
-                </tr>
-            }
-            </tbody>
-        </table>
-    }
-</div>
-
+<DatabaseResult Title="Neo4J Benchmark" BaseUrl="neo4j"></DatabaseResult>
 
 @code {
-
-    private IEnumerable<BenchmarkResult> _results;
-    private bool _isLoading;
-
-    private async Task StartNeighbourBenchmark()
-    {
-        _isLoading = true;
-        _results = await Http.GetFromJsonAsync<IEnumerable<BenchmarkResult>>("benchmark/neo4j/neighbour");
-        _isLoading = false;
-    }
-
-    private async Task StartUserBenchmark()
-    {
-        _isLoading = true;
-        _results = await Http.GetFromJsonAsync<IEnumerable<BenchmarkResult>>("benchmark/neo4j/user");
-        _isLoading = false;
-    }
 
 }
