--- a/BenchmarkApp/Client/components/DatabaseResult.razor
+++ b/BenchmarkApp/Client/components/DatabaseResult.razor
@@ -9,21 +9,37 @@
 
     <div class="margin">
         <button class="btn btn-primary" @onclick="(async () => await StartUserBenchmark())">Start User Benchmark</button>
-        <span> Loading n random users from Database</span>
+        @if (!_isUserLoading)
+        {
+            <span> Loading n random users from Database</span>
+        }
+        @if (_isUserLoading)
+        {
+            <span style="margin-left: 15px"> .. Benchmark is loading, please wait</span>
+        }
     </div>
+
     <div style="height: 15px"> </div>
 
-    @if (_results != null)
+    @if (_userResults != null)
     {
         <h4>User Benchmark Results</h4>
-        <Table Results="_results"></Table>
+        <Table Results="_userResults"></Table>
     }
 
     <div style="height: 20px"> </div>
 
     <div class="margin">
         <button class="btn btn-primary" @onclick="(async () => await StartNeighbourBenchmark())">Start Neighbours Benchmark</button>
-        <span> Finding specific user and loading n level of friends (Every User has 10 friends) </span>
+
+        @if (!_isNeighbourLoading)
+        {
+            <span> Finding specific user and loading n level of friends (Every User has 10 friends) </span>
+        }
+        @if (_isNeighbourLoading)
+        {
+            <span style="margin-left: 15px"> .. Benchmark is loading, please wait</span>
+        }
     </div>
 
     <div style="height: 15px"> </div>
@@ -34,13 +50,6 @@
         <Table Results="_neighbourResults"></Table>
     }
 
-
-    @if (_isLoading)
-    {
-        <div class="margin">
-            <span style="margin-left: 15px"> .. Benchmark is loading, please wait</span>
-        </div>
-    }
 </div>
 
 @code {
@@ -52,20 +61,26 @@
     public string BaseUrl { get; set; }
 
     private IEnumerable<BenchmarkResult> _neighbourResults;
-    private IEnumerable<BenchmarkResult> _results;
+    private IEnumerable<BenchmarkResult> _userResults;
 
-    private bool _isLoading;
+    private bool _isNeighbourLoading;
+    private bool _isUserLoading;
 
-    private async Task StartNeighbourBenchmark() => _neighbourResults = await CallApi($"benchmark/{BaseUrl}/neighbour");
+    private async Task StartNeighbourBenchmark()
+    {
+        _isNeighbourLoading = true;
+        _neighbourResults = await CallApi($"benchmark/{BaseUrl}/neighbour");
+        _isNeighbourLoading = false;
+    }
 
-    private async Task StartUserBenchmark() => _results = await CallApi($"benchmark/{BaseUrl}/user");
+    private async Task StartUserBenchmark()
+    {
+        _isUserLoading = true;
+        _userResults = await CallApi($"benchmark/{BaseUrl}/user");
+        _isUserLoading = false;
+    }
 
     private async Task<IEnumerable<BenchmarkResult>> CallApi(string url)
-    {
-        _isLoading = true;
-        var result = await Http.GetFromJsonAsync<IEnumerable<BenchmarkResult>>(url);
-        _isLoading = false;
-        return result;
-    }
+        => await Http.GetFromJsonAsync<IEnumerable<BenchmarkResult>>(url);
 
 }
