--- a/BenchmarkApp/Client/wwwroot/css/app.css
+++ b/BenchmarkApp/Client/wwwroot/css/app.css
@@ -4,7 +4,7 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-.margin{
+.margin {
     margin-top: 15px;
 }
 
@@ -46,9 +46,14 @@ a, .btn-link {
     z-index: 1000;
 }
 
-    #blazor-error-ui .dismiss {
-        cursor: pointer;
-        position: absolute;
-        right: 0.75rem;
-        top: 0.5rem;
-    }
+#blazor-error-ui .dismiss {
+    cursor: pointer;
+    position: absolute;
+    right: 0.75rem;
+    top: 0.5rem;
+}
+
+
+td{
+    width: 10%
+}
