removed unnecessary css attribute

--- a/BenchmarkApp/Client/components/Table.razor
+++ b/BenchmarkApp/Client/components/Table.razor
@@ -28,6 +28,6 @@
     public IEnumerable<BenchmarkResult> Results { get; set; }
 
     private string GetStyle(BenchmarkResult result) =>
-        result.Success ? "width: 10%; color:green" : "width: 10%; color:red";
+        result.Success ? "color:green" : "color:red";
 
 }
