--- a/BenchmarkApp/Client/components/Table.razor
+++ b/BenchmarkApp/Client/components/Table.razor
@@ -16,7 +16,7 @@
             <td>@result.Level</td>
             <td>@result.LoadedEntities</td>
             <td>@result.MilliSeconds Milliseconds</td>
-            <td style="@GetStyle(@result)">@result.Success</td>
+            <td style="@GetStyle(result)">@result.Success</td>
         </tr>
     }
     </tbody>
