added generic component for SingleResult

--- a/BenchmarkApp/Client/Pages/Mongo.razor
+++ b/BenchmarkApp/Client/Pages/Mongo.razor
@@ -2,7 +2,7 @@
 @inject HttpClient Http
 
 
-<DatabaseResult Title="Mongo Benchmark" BaseUrl="mongo"></DatabaseResult>
+<DatabaseResult Title="Mongo Benchmark" BaseUrl="benchmark/mongo"></DatabaseResult>
 
 @code {
 
