--- a/BenchmarkApp/Client/Pages/Neo4J.razor
+++ b/BenchmarkApp/Client/Pages/Neo4J.razor
@@ -1,7 +1,7 @@
 ﻿@page "/neo4j"
 @inject HttpClient Http
 
-<DatabaseResult Title="Neo4J Benchmark" BaseUrl="neo4j"></DatabaseResult>
+<DatabaseResult Title="Neo4J Benchmark" BaseUrl="benchmark/neo4j"></DatabaseResult>
 
 @code {
 
