--- a/BenchmarkApp/Client/Pages/SQL.razor
+++ b/BenchmarkApp/Client/Pages/SQL.razor
@@ -1,7 +1,7 @@
 ﻿@page "/sql"
 @inject HttpClient Http
 
-<DatabaseResult Title="Postgres Benchmark" BaseUrl="sql"></DatabaseResult>
+<DatabaseResult Title="Postgres Benchmark" BaseUrl="benchmark/sql"></DatabaseResult>
 
 @code {
 
