added order by in select queries

--- a/BenchmarkApp/Client/Components/DatabaseResult.razor
+++ b/BenchmarkApp/Client/Components/DatabaseResult.razor
@@ -19,7 +19,7 @@
     <div style="height: 15px"> </div>
 
 
-    <SingleResult Description="Loading aggregated value of users (for example age distribution)" Title="Aggregate"
+    <SingleResult Description="Loading aggregated value of users (for example average age)" Title="Aggregate"
                   Url="/aggregate" BaseUrl="@BaseUrl">
     </SingleResult>
 
