--- a/BenchmarkApp/Client/_Imports.razor
+++ b/BenchmarkApp/Client/_Imports.razor
@@ -8,4 +8,4 @@
 @using Microsoft.JSInterop
 @using BenchmarkApp.Client
 @using BenchmarkApp.Client.Shared
-@using BenchmarkApp.Client.components
+@using BenchmarkApp.Client.Components
